--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,11 @@
 <html>
-  <body>
-    <form data-g-name="Form">
 
-      <label>
-        Name:
-        <div>
-          <input data-g-name="Input">
-        </div>
-      </label>
+<head>
+  <link rel="stylesheet" href="/src/assets/css/basic.css">
+</head>
 
-      <label>
-        Age:
-        <div>
-          <input data-g-name="Input">
-        </div>
-      </label>
-        
-      <button data-g-name="Button" disabled>Register</button>
+<body>
+  <div class="flex-grid" data-g-name="Kanban" data-process="open,development,testing,closed"></div>
+</body>
 
-    </form>
-  </body>
 </html>
